# HubRemote

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: settings.local.json
docs/: CODE_REVIEW.md  DESIGN_SYSTEM.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  mpv.rs  mpv_ipc.rs  rclone.rs  shortcuts.rs  streaming.rs  tray.rs
src/components/: AuthProvider.tsx  Button.tsx  CastList.tsx  EpisodeCard.tsx  ErrorBoundary.tsx  ErrorState.tsx  FilterSidebar.tsx  HeroBanner.tsx  Layout.tsx  LibraryHeader.tsx  MediaCard.tsx  MediaRow.tsx  MusicCard.tsx  PageTransition.tsx  ProtectedRoute.tsx  RemotePanel.tsx  Skeleton.tsx  Toast.tsx  index.ts
src/contexts/: NavigationContext.tsx
src/hooks/: index.ts  useGlobalShortcuts.ts  useJellyfin.ts  useRclone.ts  useTray.ts  useUrlParams.ts  useWindowSize.ts
src/pages/: Home.tsx  ItemDetail.tsx  Library.tsx  Player.tsx  Player.tsx.bak  Remote.tsx  Settings.tsx  index.ts
src/services/: index.ts  jellyfin.ts  player.ts  rclone.ts  shortcuts.ts  streaming.ts  tray.ts
src/stores/: authStore.ts  configStore.ts  index.ts  sessionStore.ts  toastStore.ts  uiStore.ts
src/types/: index.ts  jellyfin.ts
src/utils/: formatting.ts  index.ts
